ao/pulse: wait for command completion when setting volume or mute

This makes the behavior of all control messages consistent,
fixing an inconsistency that has been with us since
4d8266c739915184d3787d7ab727ac03378b341b - which is the initial
rework of the polyaudio AO into the pulseaudio AO.

Muting the stream also directly triggers an update to the OSD.
When not waiting for the command completion this read of the mute
property may read the old state. A stale read.

Note that this somehow was not triggered on native Pulseaudio, but it is
an issue on Pipewire.

See https://gitlab.freedesktop.org/pipewire/pipewire/-/issues/868